# lending_ai

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: bootstrap.yml  ci.yml  deep-real-benchmark.yml  pages.yml  real-data-benchmark.yml
artifacts_deep/: data_quality_checks.csv  deep_calibration_bins.csv  deep_fold_metrics.csv  deep_model_metrics.csv  deep_order_sensitivity.csv  deep_paired_differences.csv  deep_stress_tests.csv  deep_summary.json  promotion_gate.json
artifacts_real/: real_history_ablation.csv  real_model_metrics.csv  real_sequence_controls.csv  real_subgroup_metrics.csv  real_summary.json
configs/: demo.yaml
data/raw/: SHA256SUMS  SOURCE.md
data/sample/: UCI_Credit_Card_sample.csv  llm_servicing_cases.jsonl
docs/: UPGRADE_IN_PROGRESS.md  decision_brief.md  deep_real_results.md  llm_servicing_design.md  model_card.md  real_data_card.md  real_results.md  references.md  stakeholder_review.md
scripts/: build_deep_report.py  build_real_dashboard.py  build_real_report.py
site/: index.html
site/real/: index.html
src/lending_ai_lab/: __init__.py  cli.py  config.py  deep_real_experiment.py  experiment.py  llm_eval.py  real_experiment.py  reporting.py  training.py
src/lending_ai_lab/data/: __init__.py  synthetic.py  uci_default.py
src/lending_ai_lab/evaluation/: __init__.py  business.py  calibration.py  data_quality.py  drift.py  fairness.py  metrics.py  paired.py  reliability.py  (+1 more)
tests/: test_data.py  test_data_quality.py  test_llm_eval.py  test_metrics.py  test_models.py  test_reliability.py  test_uci_adapter.py
(+5 files in other folders)
