[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lending-ai-lab"
version = "0.1.0"
description = "Sequence-aware credit risk modelling and LLM servicing evaluation workbench"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scikit-learn>=1.4",
  "torch>=2.2",
  "plotly>=5.20",
  "fastapi>=0.110",
  "pydantic>=2.6",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "tabulate>=0.9"]
uci = ["openpyxl>=3.1", "xlrd>=2.0"]

[project.scripts]
lending-ai = "lending_ai_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
